# enshrined-dex

./: .gitmodules  CLAUDE.md  Cargo.toml  ENSHRINED_DEX_INTEGRATION.md  INTEGRATION_COMPLETE.md  README.md  TESTING.md  justfile
contracts/broadcast/SetupDEX.s.sol/13/: run-1765885790477.json  run-1765886934923.json  run-1765887431643.json  run-latest.json
contracts/broadcast/SetupDEX.s.sol/1337/: run-1765884004132.json  run-1766080443717.json  run-1766080455092.json  run-1766080482249.json  run-1766080487995.json  run-1766080492571.json  run-1766080494867.json  run-1766080498309.json  run-1766080529945.json  run-1766080531797.json  run-1766080533200.json  run-1766080534446.json  run-1766080535789.json  run-1766080537082.json  run-1766080538336.json  run-1766080539594.json  run-1766080563866.json  run-1766080569848.json  run-1766080581944.json  run-latest.json
contracts/script/: SetupDEX.s.sol
contracts/src/: DexToken.sol  EnshrinedDEX.sol  MockEnshrinedDEX.sol
crates/dex/: Cargo.toml
crates/dex/src/: config.rs  lib.rs  order.rs  orderbook.rs  pair.rs  pool_manager.rs  router.rs  types.rs
crates/dex/tests/: e2e.rs
crates/reth-node/: Cargo.toml  README.md
crates/reth-node/src/: context.rs  generator.rs  job.rs  main.rs  payload.rs  primitives.rs  selectors.rs
crates/reth-node/src/dex/: handler.rs  mod.rs  types.rs
explorer/: package.json
explorer/app/: layout.tsx  not-found.tsx  page.tsx
explorer/app/blocks/[hash]/: page.tsx
explorer/app/pair/[token0]/[token1]/: page.tsx
explorer/app/tx/[hash]/: page.tsx
explorer/components/: AddressDisplay.tsx  LogDisplay.tsx  OrderbookChart.tsx
explorer/lib/: abis.ts  logDecoder.ts  nametags.ts  orderbookParser.ts  providers.tsx  rpc.ts  wagmi.ts
scripts/: index.ts  package.json
